fix out of bounds error

--- a/phonegap/www/css/doggr.css
+++ b/phonegap/www/css/doggr.css
@@ -22,7 +22,7 @@
 	filter:alpha(opacity=70);
 }
 #profile_img {
-	height: 50%;
+	height: 400px;
 }
 .middle {
 	padding-top: 5%;
